--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,13 @@ exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "pac
 , "docs/tests/"
 ]
 
+# Site variables
+Elements: Elements
+Formulas: Formulas
+CommonResources: VDRs
+CompanyName: Cloud Elements
+Element: Element
+
 # Regression tests
 # By default, the pages in /docs/tests are excluded when the ste is built.
 # To include them, comment-out the relevant line above.
